[project]
name = "tracker-mcp-server"
version = "0.1.0"
description = "MCP Server for Tracker API - Read-only access to events, catalog, and locks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
tracker-mcp-server = "tracker_mcp_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
